Mensagem se não existe produto

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -203,3 +203,11 @@ input[type=number] {
     color: red;
     cursor: pointer;
 }
+
+.link-cadastro{
+    color: var(--font-color);
+}
+
+.link-cadastro:hover {
+    color: var(--primary);
+}
