Mensagem se não existe produto

--- a/app/templates/listar.html
+++ b/app/templates/listar.html
@@ -5,7 +5,7 @@
     <div class="container">
         <h2>Lista de Produtos</h2>
         <div class="lits-items">
-            {% if produtos %}}
+            {% if produtos %}
             <table class="table-produtos">
                 <tr>
                     <th>Nome</th>
